# stripe-rs

./: Cargo.toml  README
src/: client.rs  lib.rs
src/resources/: event.rs
