[package]
authors = ["Kevin Stenerson <kevin@rapiditynetworks.com>"]
categories = ["api-bindings"]
description = "API bindings for the Stripe v1 HTTP API"
documentation = "https://docs.rs/stripe-rust"
keywords = [
    "stripe",
    "v1",
    "api",
]
license = "MIT/Apache-2.0"
name = "stripe-rust"
readme = "README.md"
repository = "https://github.com/rapiditynetworks/stripe-rs"
version = "0.5.0"

[badges.travis-ci]
repository = "rapiditynetworks/stripe-rs"

[dependencies]
hmac = "^0.6"
hyper = "^0.12"
hyper-tls = "0.2.1"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_qs = "^0.4"
sha2 = "^0.7"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[lib]
name = "stripe"
